# OnsetJavaJNI

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindHorizonPluginSDK.cmake
src/: CMakeLists.txt  Plugin.cpp  Plugin.h  PluginInterface.cpp  Singleton.h
